// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boolean Field Test: boolfield 1`] = `
<RCTSwitch
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onValueChange={[Function]}
  style={
    Object {
      "height": 31,
      "width": 51,
    }
  }
  value={false}
/>
`;

exports[`Boolean Field Test: set to false 1`] = `
<RCTSwitch
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onValueChange={[Function]}
  style={
    Object {
      "height": 31,
      "width": 51,
    }
  }
  value={false}
/>
`;

exports[`Boolean Field Test: set to invalid 1`] = `
<RCTSwitch
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onValueChange={[Function]}
  style={
    Object {
      "height": 31,
      "width": 51,
    }
  }
  value="invalid"
/>
`;

exports[`Boolean Field Test: set to true 1`] = `
<RCTSwitch
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onValueChange={[Function]}
  style={
    Object {
      "height": 31,
      "width": 51,
    }
  }
  value={true}
/>
`;
